--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,23 @@
     <string name="firstname_lastname_event">%1$s %2$s</string>
     <string name="format_date_without_year">%1$d %2$s</string>
     <string name="remaining_days">%1$dj</string>
+    <string name="age_event">Aura %1$d an(s)</string>
+    <string name="title_search">Search</string>
+    <string name="title_add">Add</string>
+    <string name="title_sort">Sort</string>
+    <string name="other_event">Other event</string>
+    <string name="bithday_event">Bithday event</string>
+    <string name="birthday">Birthday</string>
+    <string name="back">Back</string>
+    <string name="add">Add</string>
+    <string name="enter_the_birth_date">Enter the birth date</string>
+    <string name="first_name">First name</string>
+    <string name="last_name">Last name</string>
+    <string name="missing_information">Missing information</string>
+    <string name="an_error_has_occurred">An error has occurred. Please try again</string>
+    <string name="remaining_days_text">Remaining Days</string>
+    <string name="name">Name</string>
+    <string name="ascending_age">Ascending Age</string>
+    <string name="descending_age">Descending Age</string>
+    <string name="age">Age</string>
 </resources>
