--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,7 @@
     <string name="toast_title_no_image_chosen">No image was chosen</string>
     <string name="title_options">Options</string>
     <string name="enter_the_email">Enter the email</string>
+    <string name="you_cannot_add_yourself">You cannot add yourself.</string>
+    <string name="request_sent">Request sent.</string>
+    <string name="remove_the_user_from_discussion">Remove the user from discussion</string>
 </resources>
